--- a/Raport_HTML/raport.html
+++ b/Raport_HTML/raport.html
@@ -8,7 +8,7 @@
   <body prefix="schema: http://schema.org">
     <header>
       <div class="banner">
-        <img src="images.png" width="227" height="150" alt="logo">
+        <img src="logo.png" width="227" height="150" alt="logo">
       <h1>Interface for  Prediction of self-harm signs</h1>
       </div>
     </header>
@@ -69,6 +69,14 @@
         self-injurers report using multiple method (Favazza and Conterio, 1988; Favazza, 1992). Evidences focused on the psychological 
         intentions underlying NSSI demonstrated that the behavior serves a variety of function, both interpersonal and intrapersonal, that are
          not mutually exclusive.
+      </p>
+
+      <p>
+        This project is supposed to enable a simple way for humans to detect and to help people when their mental health is suffering.
+        How is this working? You write in the predict section the twitter username of the person you want to verify. The algorithm is checking
+        their posts and is searching for patterns, similar with the data it was trained into. After checking a verdict is set. I proposed to myself
+        to make the algorithm as close to 100% corectness as it is possible. Of course, there might be mistakes since humans use sarcasm or masking
+        and the machine that learns some patterns might be fooled.
       </p>
       <p>
         Purpose of the algorithm:
