--- a/Interfata/predict.html
+++ b/Interfata/predict.html
@@ -14,19 +14,22 @@
                 </ul>
             </div>
             <div class="pagename">
-                <h2>Home</h2>
+                <h2>Predict</h2>
             </div>
             <div class="content">
-                <h1>Early prediction of self-harm </h1>
                 <p>
-                    Check if your family/friends or even strangers are struggling with self-harm 
-                    behaviour by simply checking their twitter profile on the predict page.
+                    Write in the field bellow the username of the person to be checked. The result<br>
+                     will be Positive, if the person is suspected of the behaviour or Negative if the person looks safe.
                     <br>Remember that the verdict may not be 100% accurate. 
                 </p>
-                <div>
-                    <a href="contact.html" class="button"><span></span>CONTACT US</a>
-                </div>
-            </div>
+                <div class="formdiv">
+                    <form action="predict.html" class="form">
+                      <label for="fname">Twitter username :</label>
+                      <input type="text" id="fname" name="firstname" placeholder="ex: alle12">
+                      <input type="submit" value="Submit" >
+                    </form> 
+                </div> 
+            </div>               
         </div>
     </body>
 </html>
